
2021-01-22  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: rewritten checks for indexed handlers and
	  allow to pass specific flags via xyz_CFLAGS and xyz_LIBS,
	  AC_SUBST those for libcob/Makefile.am

2021-01-15  Ron Norman <rjn@inglenet.com> 

	* configure.ac: Updated check for D-ISAM isconfig.h and isintstd.h

2021-01-14  Ron Norman <rjn@inglenet.com> 

	* configure.ac: Updated to search D-ISAM library/header in different order
		
2020-12-24  Ron Norman <rjn@inglenet.com> 

	* configure.ac: Updated to build all INDEXED file handlers
		as shared code library
		
2020-12-23  Ron Norman <rjn@inglenet.com> 

	* configure.ac: Updates to build most INDEXED file handlers
		as shared code library
		
2020-12-16  Ron Norman <rjn@inglenet.com> 

	* configure.ac: Updates to accept --with-vbcisam
		which is for VB-ISAM 2.2 build in C-ISAM mode

2020-12-04  James K. Lowden  <jklowden@symas.com>

	* CMakeLists.txt: added, builds on Ubuntu and maybe Windows

2020-10-28  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: target for distmingwdir

2020-10-26  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac, m4/ax_ac_define_resolved.m4, Makefile.am:
	  defaults.h is not created or included any more,
	  all configure provided defines are now found in the single
	  header config.h; new macro ax_ac_define_resolved.m4 resolves
	  variables previously resolved via make, which also limits the amount
	  of variables defined in every Makefile.in
	* configure.ac: move LOCALEDIR definition from config.h to Makefiles;
	  use $() instead of backticks in all places

2020-10-23  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: version check for json-c/cJSON "poor man's check" 

2020-10-06  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: added explicit dependency order for subfolders
	* configure.ac: check for more debugging options and store them
	  as COB_DEBUG_FLAGS (defaults.h) for use in cobc; include them
	  for --enable-debug, see FR 388
